# QuteChart

./: .gitignore  CMakeLists.txt  CuteChart.qmlproject  README.md  qmlmodules
QuteChart/: AvgDottedLine.qml  CMakeLists.txt  Chart.qml  ChartController.qml  ChartFrame.qml  DateRangeText.qml  LICENSE  QuteCombo.qml  QuteLabel.qml  QuteNumber.qml  StatusItem.qml  resources.qrc
QuteChart/QuteEffects/: HorizontalGradientOpacity.frag.qsb  HorizontalGradientOpacity.vert.qsb  VerticalGradientOpacity.qep
QuteChart/asset_imports/Effects/HorizontalGradientOpacity/: HorizontalGradientOpacity.qml
QuteChart/asset_imports/Effects/VerticalGradientOpacity/: verticalgradientopacity.vert.qsb
QuteEffects/: CMakeLists.txt  HorizontalGradientOpacity.qep  HorizontalGradientOpacity.qml  VerticalGradientOpacity.qml
Tester/: CMakeLists.txt  Tester.qmlproject  qmlmodules
Tester/content/: App.qml  CMakeLists.txt  ChartFrameController.qml
Tester/imports/: CMakeLists.txt
Tester/imports/Tester/: CMakeLists.txt  qmldir
Tester/imports/Tester/designer/: plugin.metainfo
Tester/src/: Backend.cpp  import_qml_plugins.h
asset_imports/Effects/HorizontalGradientOpacity/: horizontalgradientopacity.frag.qsb
asset_imports/Effects/VerticalGradientOpacity/: VerticalGradientOpacity.qml  verticalgradientopacity.frag.qsb
content/: App.qml  AvgDottedLine.qml  CMakeLists.txt  Chart.qml  ChartFrame.qml  ChartFrameController.qml  DateRangeText.qml  QuteCombo.qml  QuteNumber.qml  StatusItem.qml  utils.js
content/effects/: VerticalGradientOpacity.frag.qsb
imports/: CMakeLists.txt
imports/CuteChart/: CMakeLists.txt  qmldir
imports/CuteChart/designer/: plugin.metainfo
imports/QuteChart/: CMakeLists.txt  qmldir
imports/QuteChart/designer/: plugin.metainfo
src/: Backend.h  import_qml_plugins.h  main.cpp
